# dailyplan

./: README.md  pyproject.toml
src/dailyplan/: cli.py  generator.py
src/dailyplan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/dailyplan/config/: tasks.yaml
